--- a/Board-with-front-end/graph-board-ui/src/assets/styles.css
+++ b/Board-with-front-end/graph-board-ui/src/assets/styles.css
@@ -1,14 +1,6 @@
-/* 
-Mayowa Obisesan
-Wallet Integration
-September 15, 2023.
-*/
-
-@import url('https://fonts.googleapis.com/css2?family=Inclusive+Sans&display=swap');
-
 * {
     box-sizing: border-box;
-    font-family: 'Inclusive Sans', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -17,69 +9,10 @@ body {
     height: 100vh;
 }
 
-body::before {
-    content: "";
-    position: fixed;
-    top: 180px;
-    left: -20%;
-    height: 800px;
-    width: 820px;
-    filter: blur(80px);
-    opacity: .2;
-    background: dodgerblue;
-}
-
-body::after {
-    content: "";
-    position: fixed;
-    z-index: -1;
-    top: -40px;
-    right: -20%;
-    height: 800px;
-    width: 820px;
-    filter: blur(108px);
-    opacity: .2;
-    background: gold;
-}
-
 .container {
     position: relative;
     height: 100vh;
     /* background: silver; */
-}
-
-.loading-alert {
-    border-radius: 16px;
-    position: relative;
-    display: block;
-    margin: 8px auto;
-    background-color: black;
-    color: white;
-    height: 96px;
-    line-height: 96px;
-    width: 240px;
-    text-align: center;
-    font-size: 24px;
-    transition: all ease-in .4s;
-}
-
-.error-alert {
-    border-radius: 16px;
-    position: relative;
-    display: block;
-    margin: 8px auto;
-    background-color: tomato;
-    color: white;
-    height: 96px;
-    line-height: 96px;
-    width: 240px;
-    text-align: center;
-    font-size: 24px;
-    transition: all ease-in .4s;
-}
-
-.ask-login-message {
-    font-size: 20px;
 }
 
 /* BOARD STYLESHEET */
@@ -88,7 +21,6 @@ body::after {
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
-    /* background: purple; */
     width: 40%;
     margin: 40px auto;
 }
@@ -102,39 +34,15 @@ body::after {
     border: 1px solid gray;
     border-radius: 4px;
     position: relative;
-    width: 96px;
-    height: 96px;
-    /* background: orange; */
+    width: 60px;
+    height: 60px;
     border: 1px solid darkgray;
-}
-
-.board .cell:disabled {
-    width: 64px;
-    height: 64px;
-    background-color: #EEE;
-    border: 1px solid lightgray;
-    cursor: not-allowed;
-}
-
-.board .cell:not(:disabled) {
-    transition: margin cubic-bezier(0.075, 0.82, 0.165, 1) .8s,
-        transform ease-in-out .2s,
-        height ease-in .8s,
-        width ease-in .8s;
-}
-
-.board:hover .cell:not(:disabled) {
-    margin: 2px 4px;
 }
 
 .row .cell:hover {
     transition: transform ease-in-out .2s;
 }
 
-.row .cell:not(:disabled):hover {
-    transform: scale(1.1, 1.1);
-    cursor: pointer;
-}
 
 /* NAV */
 .container nav {
@@ -203,28 +111,22 @@ body::after {
     outline: 0;
     border: 2px solid darkgray;
     border-radius: 8px;
-    width: 320px;
-    height: 64px;
-    line-height: 64px;
+    width: 240px;
+    height: 48px;
+    line-height: 48px;
     padding: 0 16px;
-    font-size: 40px;
+    font-size: 28px;
     transition: transform ease-out .2s;
 }
 
-.input-container input:disabled {
-    opacity: .6;
-    transform: scale(0.8, 0.8);
-}
 
 .input-container button {
     border: 0;
     border-radius: 8px;
     display: block;
     width: 120px;
-    height: 64px;
-    line-height: 64px;
-    background: dodgerblue;
-    color: white;
+    height: 48px;
+    line-height: 48px;
     font-weight: bold;
     align-self: flex-end;
     cursor: pointer;
@@ -232,14 +134,6 @@ body::after {
 
 .input-container button:focus {
     background: darkblue;
-}
-
-.input-container button:disabled {
-    opacity: .6;
-    width: 96px;
-    height: 48px;
-    line-height: 48px;
-    cursor: not-allowed;
 }
 
 footer {
